--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,15 @@ body
 	position: relative;
 }
 
+body.loading
+{
+  background-image:url(../images/loading.gif);
+  background-position: center 100px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;	
+  background-size:50px;
+}
+
 
 *
 {
@@ -113,6 +122,7 @@ a
 {
 	padding:25px;
 	font-size:1em;
+	min-height:500px;
 	width:690px;
 	margin:auto;
 	padding-bottom: 50px;
@@ -662,7 +672,7 @@ div.module>h1
 	text-align: center;
 	width:480px;
 	margin:auto;
-	margin-bottom: 40px;
+	padding-bottom: 40px;
 	line-height: 1.3;
 	padding-left:25px;
 	padding-right:25px;
